# personal

./: .dockerignore  .gitignore  DEPLOY.md  Note  README.md  ToDo.md  compose.yaml  package.json
.github/workflows/: ci-cd.yml  ci.yml
api/: .dockerignore  .env.example  .env.example.podman  .gitignore  Containerfile  Makefile  README.md  composer.json  go.mod  go.sum
api/bootstrap/: app.php
api/config/: auth.php  cache.php  database.php
api/configs/: README.md  (+1 more)
dashboard/: .env.example  Containerfile  index.html  package-lock.json
data/: .my-healthcheck.cnf  aria_log_control
docs/: ALUR_KONTEN_POST.md  ARSITEKTUR.md  AUDIT-REPORT.md  AUDIT_API.md  AUDIT_MENYELURUH.md  AUDIT_PROJECT.md  AUDIT_REPORT_ISO27001.md  CURSOR-TERMINAL-CONFIG.md  DEPLOY-PODMAN.md  DEPLOY.md  DIAGRAM_DAN_ERD.md  DUMMY_DATA_BLOG_POSTS.md  PANDUAN_DOKUMENTASI_RPL.md  PERANCANGAN_ADMIN.md  PHASE4-SECURITY.md  PUBLIKASI_WEB.md  README.md  RINGKASAN_RANCANGAN.md  RUN-API.md  SETUP-COMMANDS.md  SRS-PORTFOLIO.md  STRUKTUR-PROYEK.md  TEMPLATE-SRS.md
portfolio-admin/: README.md  package.json
portfolio-api/: .env.podman  .gitignore  README.md
portfolio-api-rs/: .env.example  Cargo.toml  README.md
portfolio-api-rs/docs/: REVIEW_API.md
portfolio-api-rs/src/: auth.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  response.rs  state.rs
portfolio-api-rs/tests/: api_test.rs
portfolio-web/: README.md  index.html  package-lock.json  package.json
web/: .env.example  .gitignore  Containerfile  DESIGN.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+372 files in other folders)
