[package]
name = "portfolio-api-rs"
version = "0.1.0"
edition = "2021"
description = "Personal Portfolio API (Axum/Rust) — OpenAPI 3, Swagger UI, REST"
authors = ["Personal Portfolio"]
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
dotenvy = "0.15"
urlencoding = "2"
bcrypt = "0.17"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util"] }
serde_json = "1"
